--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.humbleicons {
+    width: 1.15em;
+    height: 1.15em;
+    display: inline-block;
+    align-self: center;
+}
