--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,10 +1,6 @@
+@import '../../node_modules/boxicons/css/boxicons.min.css';
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.humbleicons {
-    width: 1.15em;
-    height: 1.15em;
-    display: inline-block;
-    align-self: center;
-}
